--- a/frontend/src/components/ConsultationServices/ConsultationServices.css
+++ b/frontend/src/components/ConsultationServices/ConsultationServices.css
@@ -102,9 +102,8 @@
     padding: 48px 20px;
     background-color: #131313;
     border-radius: 20px;
-    margin-top: 10px;
+    margin-top: 0px;
   }
-
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
@@ -127,13 +126,17 @@
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) and (max-width: 992px) {
+@media (max-width: 768px) {
   .consultation-services .font-weight-bold-custom {
     font-size: 35px;
   }
 
   .consultation-services .card-custom {
-    padding: 5px 10px;
+    /* padding: 5px 10px; */
+  }
+
+  .consultation-services {
+    flex-direction: column;
   }
 }
 
@@ -141,6 +144,14 @@
 @media only screen and (min-width: 992px) {
   .consultation-services .font-weight-bold-custom {
     font-size: 45px;
+  }
+
+  @media (max-width: 1600px) {
+    .consultation-services .head-h1 {
+      font: normal normal bold 50px/88px Open Sans;
+      letter-spacing: -4.16px;
+      color: #131313;
+    }
   }
 
   /* .consultation-services .card-custom {
