--- a/frontend/src/components/VisionAndMission/VisionAndMission.css
+++ b/frontend/src/components/VisionAndMission/VisionAndMission.css
@@ -1,7 +1,7 @@
 .ourservices-container {
   background-color: #131313;
   /* background: transparent linear-gradient(313deg, #FFFFFF00 0%, #FFFFFE00 70%, #A5CD375C 100%, #bbff00 100%) 0% 0% no-repeat padding-box; */
-  padding: 52px 50px;
+  padding: 0px 50px;
 }
 
 .ourservices-container .head-h1 {
@@ -56,7 +56,8 @@
 }
 
 .ourservices-container .right-section {
-  padding: 2vh 4vh;
+  padding: 0vh 4vh;
+  z-index: 100;
 }
 
 .ourservices-container .large-img {
@@ -139,7 +140,7 @@
   .ourservices-container .right-section {
     padding: 10px 10px;
     text-align: center;
-    margin-top: 1rem;
+    margin-top: 0rem;
   }
 
   .ourservices-container .bluepara {
@@ -151,6 +152,7 @@
     text-align: center;
     font: normal normal bold 50px/60px Open Sans;
     letter-spacing: 0px;
+    padding: 0px;
   }
 
   .ourservices-container .para_main {
@@ -160,7 +162,7 @@
 
 @media (max-width: 768px) {
   .ourservices-container {
-    padding: 25px 20px;
+    padding: 0px 20px;
   }
 
   .ourservices-container .ourservices-container .left-section {
@@ -169,7 +171,7 @@
   }
 
   .ourservices-container .right-section {
-    padding: 5px 5px;
+    padding: 0px 5px;
     text-align: center;
   }
 
