--- a/frontend/src/components/HomeHero/HomeHero.css
+++ b/frontend/src/components/HomeHero/HomeHero.css
@@ -5,7 +5,7 @@
 }
 
 .Homehero-content {
-    padding: 30vh 0vh 20vh;
+    padding: 27vh 0vh 20vh;
 }
 
 .Homehero-content .head-h1 {
@@ -95,6 +95,12 @@
 
 }
 
+.banner-img {
+    width: 700px;
+    position: relative;
+    transform: translateY(-50px);
+}
+
 
 @keyframes rotate {
     from {
@@ -118,22 +124,77 @@
     transform: translateY(-18px);
 }
 
+@media (max-width: 1600px) {
+    .home-hero {
+        height: auto;
+    }
+
+    .home-hero .Homehero-content {
+        padding: 2vh 0vh 2vh 0vh;
+    }
+
+    .Homehero-content .head-h1 {
+        font-size: 3em;
+    }
+
+    .Homehero-content .para_main {
+        width: 100%;
+
+    }
+
+    .social-media-icons {}
+
+    .home-hero .banner-img {
+        width: 100%;
+        margin: 0 auto;
+        transform: translateY(-50px);
+        padding: 2vh 0vh;
+    }
+
+    .home-hero .button-text-container {
+        display: flex;
+        align-items: center;
+        gap: 28px;
+    }
+}
+
 @media (max-width: 1024px) {
     .home-hero {
         height: auto;
+        flex-direction: row-reverse;
+
+    }
+
+    .home-hero .Homehero-content {
+        padding: 2vh 0vh 2vh 0vh;
     }
 
     .Homehero-content .head-h1 {
         font-size: 2.5em;
         text-align: center;
+        padding: 0px;
     }
 
     .Homehero-content .para_main {
-        width: 90%;
+        width: 100%;
         text-align: center;
     }
 
     .social-media-icons {
+        justify-content: center;
+    }
+
+    .home-hero .banner-img {
+        width: 100%;
+        margin: 0 auto;
+        transform: translateY(-0px);
+        padding: 2vh 0vh;
+    }
+
+    .home-hero .button-text-container {
+        display: flex;
+        align-items: center;
+        gap: 28px;
         justify-content: center;
     }
 }
@@ -184,9 +245,10 @@
         height: auto;
     }
 
-    .banner-img {
+    .home-hero .banner-img {
         width: 100%;
-        height: auto;
+        margin: 0 auto;
+        transform: translateY(-0px);
     }
 }
 
@@ -208,8 +270,9 @@
     }
 
     .home-hero .banner-img {
-        width: 80%;
+        width: 100%;
         margin: 0 auto;
+        transform: translateY(-0px);
     }
 
     .home-hero .get-consult {
