Frontend Level Work

--- a/frontend/src/components/BlogInnerHeroComponent/BlogInnerHero.css
+++ b/frontend/src/components/BlogInnerHeroComponent/BlogInnerHero.css
@@ -1,27 +1,50 @@
-.blogs-hero {
+.blog-inner-hero {
     position: relative;
-    height: 100vh;
     background-color: #131313;
+    padding: 17vh 0vh 0vh 0vh;
 }
 
-.Homehero-content {
-    padding: 30vh 0vh 20vh;
+.BlogInner-content {
+    padding: 10vh 0vh 2vh 0vh; 
+    text-align: center;
 }
 
-.Homehero-content .head-h1 {
-    font: normal normal bold 75px/89px Open Sans;
-    padding: 0px 20px 0px 00px;
+.BlogInner-content .head-h1 {
+    font: normal normal bold 80px/89px Open Sans;
+    text-align: center;
+    padding: 0vh 14vh;
+
 }
 
-.Homehero-content .para_main {
+.BlogInner-content .para_main {
     margin-bottom: 14px;
 }
 
-.Homehero-content .connect-button {
-    margin-top: 12px;
+.blog-inner-hero .banner-blog {
+    width: 100%;
 }
 
-.blogs-hero .get-consult {
+/* .blog-inner-hero .banner-section {
+    padding: 60px;
+} */
+
+.BlogInner-content .connect-button {
+    background-color: #464646;
+    border: 1px solid #9F9F9F;
+    color: #FFFFFF;
+    border: none;
+    /* margin-right: 10px; */
+    padding: 8px 55px; /* Adjust padding for smaller screens */
+    font-size: 1rem; /* Adjust font size for smaller screens */
+}
+
+.blog-inner-hero .button-text-container {
+    display: flex;
+    align-items: center;
+    gap: 28px;
+}
+
+.blog-inner-hero .get-consult {
     margin: 0;
     font-weight: 400;
     font: normal normal 600 16px/30px Open Sans;
@@ -32,7 +55,7 @@
     line-height: 2;
 }
 
-.blogs-hero .text-button-container {
+.blog-inner-hero .text-button-container {
     display: flex;
     gap: 14px;
     align-items: center;
@@ -40,38 +63,38 @@
     padding: 0vh 2vh;
 }
 
-.blogs-hero .text-button-container .button-icon {
+.blog-inner-hero .text-button-container .button-icon {
     align-items: center;
     margin-top: 6px;
 }
 
-.Homehero-content .main-head {
+.BlogInner-content .main-head {
     color: #717C93;
 }
 
-.blogs-hero .social-media-icons {
+.blog-inner-hero .social-media-icons {
     display: flex;
     gap: 12px;
     padding: 3vh 0vh 0vh 0vh;
     align-items: center;
 }
 
-.blogs-hero .social-media-icons .span-line {
+.blog-inner-hero .social-media-icons .span-line {
     padding: 0px 14px;
 }
 
-.blogs-hero .swiper-container {
+.blog-inner-hero .swiper-container {
     height: 100%;
     position: relative;
 }
 
-.blogs-hero .swiper-slide {
+.blog-inner-hero .swiper-slide {
     position: relative;
     left: 0;
     z-index: 1;
 }
 
-.blogs-hero .image-background-container {
+.blog-inner-hero .image-background-container {
     position: relative;
     /* Ensure it can be positioned with z-index */
     z-index: 1;
@@ -88,9 +111,11 @@
     /* Optional: Add padding if needed */
 }
 
-.blog-banner {
-    
-}
+/* .banner-img {
+    width: 700px;
+    position: relative;
+    transform: translateY(-50px);
+} */
 
 
 @keyframes rotate {
@@ -115,85 +140,43 @@
     transform: translateY(-18px);
 }
 
-.NewsLetter-container .form-container {}
-
-.NewsLetter-container .genral-btn {
-    background-color: #A5CD37;
-    border-radius: 50px;
-    border: none;
-}
-
-.blogs-hero .button-area-container .inp-container {
-    background: #1A1A1A;
-    padding-left: 5px;
-    /* margin: auto; */
-    /* margin-top: 20px; */
-    width: 70%;
-    overflow: hidden;
-}
-
-.blogs-hero .inp-container input {
-    /* width: 100%; */
-    border: none;
-    /* padding: 10px;
-    padding-left: 15px; */
-    color: #7070708e;
-    padding: 1vh 3vh;
-    background: transparent;
-}
-
-.blogs-hero .inp-container input::placeholder {
-    color: #707070a8;
-    padding: 0vh 0vh;
-}
-
-.blogs-hero .inp-container input:focus {
-    outline: none;
-}
-
-.blogs-hero .connect-button {
-    border-radius: 5px;
-    margin-top: 0px;
-    padding: 9px 26px;
-}
-
 @media (max-width: 1600px) {
-    .blogs-hero {
+    .blog-inner-hero {
         height: auto;
     }
 
-    .Homehero-content .head-h1 {
+    .BlogInner-content .head-h1 {
         font-size: 2.5em;
 
     }
 
-    .blogs-hero .Homehero-content {
+    .blog-inner-hero .BlogInner-content {
         padding: 2vh 0vh 2vh 0vh;
     }
 
-    .Homehero-content .para_main {
+    .BlogInner-content .para_main {
         width: 100%;
 
     }
 
-    .Homehero-content .head-h1 {
+    .BlogInner-content .head-h1 {
         font-size: 3em;
     }
 
-    .Homehero-content .para_main {
+    .BlogInner-content .para_main {
         width: 100%;
     }
 
     .social-media-icons {}
 
-    .blogs-hero .blog-banner {
+    .blog-inner-hero .banner-img {
         width: 100%;
         margin: 0 auto;
         transform: translateY(-50px);
         padding: 2vh 0vh;
     }
 
-    .blogs-hero .button-text-container {
+    .blog-inner-hero .button-text-container {
         display: flex;
         align-items: center;
         gap: 28px;
@@ -201,23 +184,23 @@
 }
 
 @media (max-width: 1024px) {
-    .blogs-hero {
+    .blog-inner-hero {
         height: auto;
         flex-direction: row-reverse;
 
     }
 
-    .blogs-hero .Homehero-content {
-        padding: 2vh 0vh 2vh 0vh;
+    .blog-inner-hero .BlogInner-content {
+        padding: 3vh 0vh 2vh 0vh;
     }
 
-    .Homehero-content .head-h1 {
+    .BlogInner-content .head-h1 {
         font-size: 2.5em;
         text-align: center;
         padding: 0px;
     }
 
-    .Homehero-content .para_main {
+    .BlogInner-content .para_main {
         width: 100%;
         text-align: center;
     }
@@ -226,14 +209,14 @@
         justify-content: center;
     }
 
-    .blogs-hero .blog-banner {
+    .blog-inner-hero .banner-img {
         width: 100%;
         margin: 0 auto;
         transform: translateY(-0px);
         padding: 2vh 0vh;
     }
 
-    .blogs-hero .button-text-container {
+    .blog-inner-hero .button-text-container {
         display: flex;
         align-items: center;
         gap: 28px;
@@ -243,33 +226,41 @@
 
 /* Small screens - mobile */
 @media (max-width: 768px) {
-    .blogs-hero {
+    .blog-inner-hero {
         padding: 25px 12px;
         flex-direction: column;
         height: auto;
     }
 
-    .Homehero-content {
+    .blog-inner-container {
+        flex-direction: row-reverse;
+    }
+
+    .blog-inner-hero .BlogInner-content {
+        padding: 4vh 0vh 0vh 0vh;
+    }
+
+    .BlogInner-content {
         text-align: center;
         margin-bottom: 20px;
         padding: 0vh;
     }
 
-    .Homehero-content .head-h1 {
+    .BlogInner-content .head-h1 {
         font-size: 3em;
         padding: 0px;
     }
 
-    .Homehero-content .para_main {
+    .BlogInner-content .para_main {
         font-size: 1em;
         width: 100%;
     }
 
-    .blogs-hero .button-text-container {
+    .blog-inner-hero .button-text-container {
         gap: 10px;
     }
 
-    .Homehero-content .connect-button {
+    .BlogInner-content .connect-button {
         padding: 4px 22px;
         font-size: 12px;
         width: 132px;
@@ -287,43 +278,22 @@
         height: auto;
     }
 
-    .blogs-hero .blog-banner {
+    .blog-inner-hero .banner-img {
         width: 100%;
         margin: 0 auto;
         transform: translateY(-0px);
     }
-
-    .blogs-hero .inp-container input {
-        width: 53%;
-    }
-
-    .blogs-hero .button-area-container .inp-container {
-        width: 100%;
-    }
-
-
-    .blogs-hero .inp-container {
-        background: transparent;
-        border: 1px solid #70707033;
-        padding-left: 5px;
-        border-radius: 32px;
-        width: 100%;
-        margin: auto;
-        margin-top: 10px;
-        overflow: hidden;
-    }
-
 }
 
 /* Extra small screens */
 @media (max-width: 480px) {
-    .Homehero-content .head-h1 {
+    .BlogInner-content .head-h1 {
         font-size: 3em;
         line-height: 1.2;
-        padding: 0px;
+        padding: 15px 0px;
     }
 
-    .Homehero-content .para_main {
+    .BlogInner-content .para_main {
         font-size: 0.9em;
         width: 100%;
     }
@@ -332,13 +302,13 @@
         max-width: 30px;
     }
 
-    .blogs-hero .blog-banner {
+    .blog-inner-hero .banner-img {
         width: 100%;
         margin: 0 auto;
         transform: translateY(-0px);
     }
 
-    .blogs-hero .get-consult {
+    .blog-inner-hero .get-consult {
 
         font: normal normal 600 12px/30px Open Sans;
         letter-spacing: 0px;
