--- a/frontend/src/components/FooterNew/footerHero.css
+++ b/frontend/src/components/FooterNew/footerHero.css
@@ -155,7 +155,7 @@ ul li a:hover {
   margin-top: 18px;
   /* margin-left: 5rem; */
   text-align: center;
-  color: #F0F2F5;
+  color: #9F9F9F;
 }
 
 .footer .social-icons {
