--- a/frontend/src/components/VisionAndMission/VisionAndMission.css
+++ b/frontend/src/components/VisionAndMission/VisionAndMission.css
@@ -62,7 +62,7 @@
 
 .ourservices-container .large-img {
   width: 100%;
-  padding: 0vh 0vh;
+  padding: 4vh 0vh;
 }
 
 .ourservices-container .flex-container {
@@ -217,5 +217,12 @@
 
   .ourservices-container .connect-button {
     font-size: 12px;
+  }
+
+  .ourservices-container .span-head {
+    font: normal normal bold 50px/60px Open Sans;
+    letter-spacing: -4.16px;
+    color: #ACF96D;
+    position: relative;
   }
 }
