--- a/frontend/src/components/BlogInnerHeroComponent/BlogInnerHero.css
+++ b/frontend/src/components/BlogInnerHeroComponent/BlogInnerHero.css
@@ -5,7 +5,7 @@
 }
 
 .BlogInner-content {
-    padding: 10vh 0vh 2vh 0vh; 
+    padding: 10vh 0vh 2vh 0vh;
     text-align: center;
 }
 
@@ -25,8 +25,10 @@
 }
 
 /* .blog-inner-hero .banner-section {
-    padding: 60px;
+    padding: 0px 100px;
 } */
+
+
 
 .BlogInner-content .connect-button {
     background-color: #464646;
@@ -34,8 +36,10 @@
     color: #FFFFFF;
     border: none;
     /* margin-right: 10px; */
-    padding: 8px 55px; /* Adjust padding for smaller screens */
-    font-size: 1rem; /* Adjust font size for smaller screens */
+    padding: 8px 55px;
+    /* Adjust padding for smaller screens */
+    font-size: 1rem;
+    /* Adjust font size for smaller screens */
 }
 
 .blog-inner-hero .button-text-container {
