--- a/frontend/src/components/DesignGrids/DesignGrids.css
+++ b/frontend/src/components/DesignGrids/DesignGrids.css
@@ -4,12 +4,16 @@
 .Design-container .custom-card {
   background-color: #131313;
   /* Dark background */
-  border-radius: 10px;
+  border-radius: 40px;
   padding: 20px;
   margin-bottom: 30px;
   color: #fff;
   /* White text */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.Design-container .all-cards {
+  padding: 4vh 0vh;
 }
 
 .Design-container .custom-card .head-h1 {
@@ -34,7 +38,7 @@
   display: block;
   margin: 0 auto;
   width: 80%;
-  padding: 20px 0;
+  padding: 20px 0px 0px 0px;
 }
 
 .Design-container .tags {
@@ -85,7 +89,11 @@
 }
 
 .Design-container .design-images {
-  padding: 55px;
+  padding: 60px 60px 0px 60px;
+}
+
+.Design-container .card-body {
+  padding: 10px 15px 26px 22px;
 }
 
 /* Responsive styles */
