--- a/frontend/src/components/ContactUsPage/ContactPage.css
+++ b/frontend/src/components/ContactUsPage/ContactPage.css
@@ -98,7 +98,7 @@
     background-color: var(--eerie-black);
     border-radius: 24px;
     flex-direction: column;
-    padding: 2px 36px;
+    padding: 2px 0px 2px 36px;
 }
 
 .contact-wrapper .contact-details .contact-item {
@@ -121,6 +121,7 @@
 .contact-wrapper .contact-details .para_main {
     font-size: 22px;
     color: #fff;
+    margin-top: 0px;
     /* padding: 10px 0px; */
 }
 
