--- a/frontend/src/components/DesignGrids/DesignGrids.css
+++ b/frontend/src/components/DesignGrids/DesignGrids.css
@@ -48,6 +48,10 @@
   /* position: relative; */
 }
 
+.Design-container .para_main {
+  padding: 0px 140px;
+}
+
 /* .tags::after {
   content: '';
   display: block;
@@ -85,8 +89,8 @@
 }
 
 .Design-container .btn-outline-light:hover {
-  background-color: #fff;
-  color: #222;
+  background-color: #333333;
+  color: #ffffff;
 }
 
 .Design-container .design-images {
