--- a/frontend/src/components/DesignGrids/DesignGrids.css
+++ b/frontend/src/components/DesignGrids/DesignGrids.css
@@ -48,9 +48,9 @@
   /* position: relative; */
 }
 
-.Design-container .para_main {
+/* .Design-container .para_main {
   padding: 0px 140px;
-}
+} */
 
 /* .tags::after {
   content: '';
