--- a/frontend/src/components/ConsultationServices/ConsultationServices.css
+++ b/frontend/src/components/ConsultationServices/ConsultationServices.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 50px 12px;
+  padding: 70px 12px;
   /* Adjust padding as needed */
   /* background-color: #FFFFFF; */
 }
@@ -30,16 +30,24 @@
   margin-top: 22px;
 }
 
+/* Hover effect for the card */
 .consultation-services .card-custom {
   border-radius: 20px;
+  transition: transform 0.3s ease, background-color 0.3s ease;
 }
+
+.consultation-services .card-custom:hover {
+  transform: scale(1.03);
+  background-color: #2e2e2e;
+}
+
 
 .consultation-services .icon-container {
   display: flex;
   margin-bottom: 15px;
 }
 
-.icon-image {
+.consultation-services .icon-image {
   background-color: white;
   border-radius: 40px;
   padding: 14px;
